Добавлен модуль тестирования Mantis